fix alignments

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,3 +1,9 @@
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .switchLocale {
     display: flex;
     list-style: none;
